part1/1.4/app4 (Log output)/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-split-svc
spec:
  type: ClusterIP
  selector:
    app: log-output-split
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
